--- a/CodeX - Shopping Cart/style.css
+++ b/CodeX - Shopping Cart/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .container {
-    max-width: 1068px;
+    max-width: 1168px;
     margin: auto;
     width: 100%;
 }
@@ -67,10 +67,13 @@ header {
     cursor: pointer;
 }
 
+
+/* Cart */
+
 .cart {
     position: fixed;
     top: 0;
-    right: 0;
+    right: -100%;
     width: 360px;
     min-height: 100vh;
     padding: 20px;
@@ -81,6 +84,10 @@ header {
 
 .cart.active {
     right: 0;
+}
+
+#close-cart:hover {
+    color: var(--main-color);
 }
 
 .cart-title {
@@ -233,4 +240,43 @@ header {
 
 .add-cart:hover {
     background: hsl(249, 32%, 17%);
+}
+
+
+/* Responsiveness*/
+
+@media (max-width:1080px) {
+    .nav {
+        padding: 15px;
+    }
+    section {
+        padding: 3rem 2rem 1rem;
+    }
+    .container {
+        margin: 0 auto;
+    }
+    .shop {
+        margin-top: 2rem !important;
+    }
+}
+
+@media (max-width:400px) {
+    .nav {
+        padding: 11px;
+    }
+    .logo {
+        font-size: 1rem;
+    }
+    .cart {
+        width: 320px;
+    }
+}
+
+@media (max-width:360px) {
+    .shop {
+        margin-top: 1rem !important;
+    }
+    .cart {
+        width: 280px;
+    }
 }
